[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { workspace = true }
crossterm = { version = "0.28.1", default-features = false, features = ["events"] }
anyhow = { workspace = true }
colored = "3.0.0"
chrono = { workspace = true }

models = { path = "../models" }
rule = { path = "../rule" }
