[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { workspace = true }
crossterm = { version = "0.29.0", default-features = false, features = ["events"] }
anyhow = { workspace = true }
colored = "3.0.0"
chrono = { workspace = true }
dashmap = { version = "6.1.0", optional = true }

models = { path = "../models" }
rule = { path = "../rule" }

[features]
dashmap-support = ["dashmap"]
