[package]
name = "checkupdate-stream-dashmap"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
dashmap = "6.1.0"

common = { path = "../common", features = ["dashmap-support"] }

[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.3.1"
