[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "1.0.1", features = [
    "sqlx-sqlite", "runtime-tokio-rustls", "macros"
] }
serde = { version = "1.0.210", features = ["derive"] }
