[package]
name = "rule"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "gzip", "native-tls-alpn"] }
regex = "1.11.1"
serde_json = "1.0.137"
serde_json_path = "0.7.1"
anyhow = "1.0.95"
scraper = "0.22.0"
semver = "1.0.25"
models = { path = "../models" }
roxmltree = { version = "0.20.0"}
chrono = { version = "0.4.39", default-features = false, features = ["clock", "serde"] }
