[package]
name = "rule"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.20", features = ["json", "gzip"] }
regex = "1.11.1"
serde_json = { workspace = true }
serde_json_path = "0.7.2"
anyhow = { workspace = true }
scraper = "0.23.1"
semver = "1.0.26"
models = { path = "../models" }
roxmltree = { version = "0.20.0" }
chrono = { workspace = true }
