[package]
name = "rule"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["json", "gzip"] }
regex = "1.12.2"
serde_json = { workspace = true }
serde_json_path = "0.7.2"
anyhow = { workspace = true }
scraper = "0.24.0"
semver = "1.0.27"
models = { path = "../models" }
roxmltree = { version = "0.21.1" }
chrono = { workspace = true }
