[package]
name = "checkupdate-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "1.1.4", features = [
    "sqlx-sqlite", "runtime-tokio-native-tls", "macros"
] }
serde_json = "1.0.135"

tokio = { version = "1.43.0", features = ["full"] }
futures-util = "0.3.31"

colored = "3.0.0"
anyhow = "1.0.95"
rule = { path = "../rule" }
models = { path = "../models" }
crossterm = { version = "0.28.1", default-features = false, features = ["events"] }

[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.2.1"
