[package]
name = "checkupdate-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.15", features = [
    "sqlx-sqlite", "runtime-tokio-native-tls", "macros"
] }
serde_json = "1.0.115"

tokio = { version = "1.36.0", features = ["full"] }
futures-util = "0.3.30"

colored = "2.1.0"

anyhow = "1.0.81"
enable-ansi-support = "0.2.1"
rule = { path = "../rule" }
models = { path = "../models" }
