[package]
name = "checkupdate-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "1.0.1", features = [
    "sqlx-sqlite", "runtime-tokio-rustls", "macros"
] }
serde_json = "1.0.128"

tokio = { version = "1.40.0", features = ["full"] }
futures-util = "0.3.30"

colored = "2.1.0"
anyhow = "1.0.88"
rule = { path = "../rule" }
models = { path = "../models" }
crossterm = { version = "0.28.1", default-features = false, features = ["events"] }

[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.2.1"
